Switch favorites to feed-level
